extra things added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>experiment</title>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="practice1.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css">
+    <link rel="stylesheet" href="resume.css">
 </head>
 
 <body>
@@ -39,7 +40,7 @@
         <section id="about" class="aboutContainer">
             <div class="about-content">
                 <div class="about-right">
-                    <img src="images/me.png" alt="Fantastic Buddy">
+                    <img src="me2.png" alt="Fantastic Buddy">
                 </div>
                 <div class="about-left">
                     <div>
@@ -64,10 +65,24 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- hobbies section -->
         <section class="hobbiesContainer">
-
+            <h1>HOBBIES</h1>
+            <div class="all-hobbies">
+                <div class="hobbie1">
+                    <h2>Karate</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nesciunt voluptas consectetur fuga voluptatibus. Porro ex quaerat esse perspiciatis, optio commodi pariatur maxime temporibus odit.</p>
+                </div>
+                <div class="hobbie2">
+                    <h1>Chess</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nesciunt voluptas consectetur fuga voluptatibus. Porro ex quaerat esse perspiciatis, optio commodi pariatur maxime temporibus odit.</p>
+                </div>
+                <div class="hobbie3">
+                    <h1>Rubik's Cube</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nesciunt voluptas consectetur fuga voluptatibus. Porro ex quaerat esse perspiciatis, optio commodi pariatur maxime temporibus odit.</p>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -91,6 +106,8 @@
                 <h1 id="logo">RV</h1>
                 <p>Let's join together and create something remarkable!
                 </p>
+                <!-- <p class="mail"><i class="fa fa-envelope"></i> riya.1726.verma@gmail.com</p> -->
+                <!-- <p class="no"><i class="fa fa-phone"></i> +91 7935266785</p> -->
                 <div class="socials">
                     <a href="https://instagram.com/isitriyav?igshid=NGExMmI2YTkyZg==" class="fa fa-instagram"></a>
                     <a href="https://github.com/riyaVerma1726" class="fa fa-github"></a>
