--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
     <!-- main content -->
     <main>
 
-        <section class="bigContainer">
-            <div class="container">
-
+        <section class="main-container">
+            <div class="main-content">
+                <div class="main-left">
+                    <!-- <img src="images/karate.jpg" alt=""> -->
+                </div>
+                <div class="main-right">
+                    <h2>Hi, I'm Riya Verma</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos hic sapiente alias, expedita a vitae! Quos recusandae numquam et animi deleniti cumque distinctio nam?</p>
+                </div>
             </div>
         </section>
         <!-- about section -->
-        <section id="about" class="aboutContainer">
+        <section id="about" class="about-container">
             <div class="about-content">
                 <div class="about-right">
-                    <img src="me2.png" alt="Fantastic Buddy">
+                    <img src="images/me2.png" alt="Fantastic Buddy">
                 </div>
                 <div class="about-left">
                     <div>
@@ -67,20 +73,38 @@
         </section>
 
         <!-- hobbies section -->
-        <section class="hobbiesContainer">
-            <h1>HOBBIES</h1>
+        <section class="hobbies-container">
+            <h1>MY H🏈BBIES</h1>
             <div class="all-hobbies">
-                <div class="hobbie1">
-                    <h2>Karate</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nesciunt voluptas consectetur fuga voluptatibus. Porro ex quaerat esse perspiciatis, optio commodi pariatur maxime temporibus odit.</p>
+                <div class="hobbie hobbie1">
+                    <div class="image">
+                        <img src="https://images.unsplash.com/photo-1577998555981-6e798325914e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8a2FyYXRlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="hobbie-content">
+                        <h2>Karate</h2>
+                        <p>From White Belt to National Stage: <br> "Karate's Power Shapes Character on My Path."</p>
+                    </div>
                 </div>
-                <div class="hobbie2">
-                    <h1>Chess</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nesciunt voluptas consectetur fuga voluptatibus. Porro ex quaerat esse perspiciatis, optio commodi pariatur maxime temporibus odit.</p>
+                <div class="hobbie hobbie2">
+                    <div class="image">
+                        <img src="https://images.unsplash.com/photo-1528819622765-d6bcf132f793?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8Y2hlc3N8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="hobbie-content">
+                        <h2>Chess</h2>
+                        <p>From Pawn to GrandMaster: <br> "Harnessing Serenity in the Face of Checkmate."</p>
+                    </div>
                 </div>
-                <div class="hobbie3">
-                    <h1>Rubik's Cube</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nesciunt voluptas consectetur fuga voluptatibus. Porro ex quaerat esse perspiciatis, optio commodi pariatur maxime temporibus odit.</p>
+                <div class="hobbie hobbie3">
+                    <div class="image">
+                        <img src="https://images.unsplash.com/photo-1586173806725-797f4d632f5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cnViaWtzJTIwY3ViZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="hobbie-content">
+                        <h2>Rubik's Cube</h2>
+                        <p>Childhood Bliss, Toy's Serene Embrace: <br> "Bring Me Joy with a Smiling Face".</p>
+                    </div>
                 </div>
             </div>
         </section>
